--- a/views/index.ejs
+++ b/views/index.ejs
@@ -68,8 +68,9 @@
                 </svg>
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+<!--             
               <li><a class="dropdown-item" href="./login.html">로그인</a></li>
-              <li><a class="dropdown-item" href="./Join.html">회원가입</a></li>
+              <li><a class="dropdown-item" href="./Join.html">회원가입</a></li> -->
               <li><a class="dropdown-item" href="#">마이페이지</a></li>
               <li><a class="dropdown-item" href="#">로그아웃</a></li>
 
@@ -96,19 +97,19 @@
     <!-- The slideshow/carousel -->
     <div class="carousel-inner" id="test01">
       <div class="carousel-item active">
-        <img src="./img/뷰건메인.png" alt="" class="d-block w-100">
+        <img src="/public/img/뷰건메인.png" alt="" class="d-block w-100">
       </div>
       <div class="carousel-item">
-        <img src="./img/디어달리아.png" alt="" class="d-block w-100">
+        <img src="../img/디어달리아.png" alt="" class="d-block w-100">
       </div>
       <div class="carousel-item">
-        <img src="./img/멜릭서.png" alt="" class="d-block w-100">
+        <img src="../img/멜릭서.png" alt="" class="d-block w-100">
       </div>
       <div class="carousel-item">
-        <img src="./img/러쉬.png" alt="" class="d-block w-100">
+        <img src="../img/러쉬.png" alt="" class="d-block w-100">
       </div>
       <div class="carousel-item">
-        <img src="./img/아떼.png" alt="" class="d-block w-100">
+        <img src="../img/아떼.png" alt="" class="d-block w-100">
       </div>
     </div>
   
