--- a/views/items.ejs
+++ b/views/items.ejs
@@ -17,7 +17,7 @@
         <div class="menu-bar">
             <div class="menu-box">
                 <ul class="row">
-                    <li class="cell">
+                    <li class="menu">
                         <div class="dropdown">
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                         <a href="#">SKINCARE</a>
@@ -34,7 +34,7 @@
                       </div>
                     </li>
 
-                    <li class="cell">
+                    <li class="menu">
                         <div class="dropdown">
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                             <a href="#">MAKEUP</a>
@@ -50,7 +50,7 @@
                       </div>
                     </li>
 
-                    <li class="cell">
+                    <li class="menu">
                         <div class="dropdown">
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                             <a href="#">CLEANSING</a>
@@ -63,7 +63,7 @@
                         </ul>
                       </div>
                     </li>
-                    <li class="cell">
+                    <li class="menu">
                         <div class="dropdown">
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                             <a href="#">SUN</a>
@@ -74,7 +74,7 @@
                       </div>  
                     </li>
 
-                    <li class="cell">
+                    <li class="menu">
                         <div class="dropdown">
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                             <a href="#">BODY</a>
@@ -87,7 +87,7 @@
                         </ul>
                       </div>
                     </li>
-                    <li class="cell">
+                    <li class="menu">
                         <div class="dropdown">
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                             <a href="#">other</a>
@@ -97,7 +97,7 @@
                         </ul>
                       </div> 
                     </li>
-                    <li class="cell"><div class="dropdown">
+                    <li class="menu"><div class="dropdown">
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                             <a href="#">BRAND</a>
                         </button>
