--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,10 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <style>
-        #test01{
-            height: 600px;
-        }
-
+        
         #logo{
             height: 45px;
         }
@@ -78,7 +75,7 @@
                     <li><a class="dropdown-item" href="./Join.html">회원가입</a></li> 
                 
                 <%}else{%>
-                    <li><a class="dropdown-item" href="#">마이페이지</a></li>
+                    <li><a class="dropdown-item" href="http://127.0.0.1:3000/mypage_main">마이페이지</a></li>
                     <li><a class="dropdown-item" href="http://127.0.0.1:3000/logout">로그아웃</a></li>
                 <%}%>
 
@@ -238,7 +235,7 @@
     </a>
 
     <ul class="nav col-md-4 justify-content-end">
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+      <li class="nav-item"><a href="http://127.0.0.1:3000/main" class="nav-link px-2 text-muted">Home</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
