--- a/views/index.ejs
+++ b/views/index.ejs
@@ -102,7 +102,7 @@
     <!-- The slideshow/carousel -->
     <div class="carousel-inner" id="test01">
       <div class="carousel-item active">
-        <img src="/public/img/뷰건메인.png" alt="" class="d-block w-100">
+        <img src="../img/뷰건메인.png" alt="" class="d-block w-100">
       </div>
       <div class="carousel-item">
         <img src="../img/디어달리아.png" alt="" class="d-block w-100">
