--- a/views/index.ejs
+++ b/views/index.ejs
@@ -95,19 +95,19 @@
     <!-- The slideshow/carousel -->
     <div class="carousel-inner" id="test01">
       <div class="carousel-item active">
-        <img src="../img/뷰건메인.png" alt="" class="d-block w-100">
+        <img src="../public/img/001.jpg" alt="" class="d-block w-100">
       </div>  
       <div class="carousel-item">
-        <img src="../img/디어달리아.png" alt="" class="d-block w-100">
+        <img src="../public/img/002.jpg" alt="" class="d-block w-100">
       </div>
       <div class="carousel-item">
-        <img src="../img/멜릭서.png" alt="" class="d-block w-100">
+        <img src="../public/img/003.jpg" alt="" class="d-block w-100">
       </div>
       <div class="carousel-item">
-        <img src="../img/러쉬.png" alt="" class="d-block w-100">
+        <img src="../public/img/004.jpg" alt="" class="d-block w-100">
       </div>
       <div class="carousel-item">
-        <img src="../img/아떼.png" alt="" class="d-block w-100">
+        <img src="../public/img/005.jpg" alt="" class="d-block w-100">
       </div>
     </div>
   
