--- a/views/index.ejs
+++ b/views/index.ejs
@@ -95,19 +95,19 @@
     <!-- The slideshow/carousel -->
     <div class="carousel-inner" id="test01">
       <div class="carousel-item active">
-        <img src="../public/img/001.jpg" alt="" class="d-block w-100">
+        <img src="../img/001.jpg" alt="" class="d-block w-100">
       </div>  
       <div class="carousel-item">
-        <img src="../public/img/002.jpg" alt="" class="d-block w-100">
+        <img src="../img/002.jpg" alt="" class="d-block w-100">
       </div>
       <div class="carousel-item">
-        <img src="../public/img/003.jpg" alt="" class="d-block w-100">
+        <img src="../img/003.jpg" alt="" class="d-block w-100">
       </div>
       <div class="carousel-item">
-        <img src="../public/img/004.jpg" alt="" class="d-block w-100">
+        <img src="../img/004.jpg" alt="" class="d-block w-100">
       </div>
       <div class="carousel-item">
-        <img src="../public/img/005.jpg" alt="" class="d-block w-100">
+        <img src="../img/005.jpg" alt="" class="d-block w-100">
       </div>
     </div>
   
@@ -207,10 +207,9 @@
       <div class="col-lg-5">
         <img src="../img/추천멘트01.png" alt="" class="img-fluid">
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center my-4">
-          <button type="button" class="btn btn-outline-success btn-lg px-4 gap-3">상품 보러가기</button>
+          <button type="button" class="btn btn-outline-success btn-lg px-4 gap-3"><a href="./recommend_start.html">추천상품보러가기</a></button>
       </div>
-      </div>
-      
+      </div>     
     </div>
     <br><br><br>
   </div>
