--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,24 +8,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <style>
-<<<<<<< HEAD
        #logo{
-=======
-        
-        #logo{
->>>>>>> f071ac529ee4320f983ee0e2b9edc8eff64b6900
             height: 45px;
         }
         a.dropdown-item{
             text-align: end;
         }
-
         body>header, footer{
             background-color: #093023;
         }
-
-        
-
         p {
             float:inline-end;
         }
@@ -100,8 +91,8 @@
     <!-- The slideshow/carousel -->
     <div class="carousel-inner" id="test01">
       <div class="carousel-item active">
-        <img src="../img/뷰건메인.png" alt="" class="d-block w-100">
-      </div>  
+        <img src="/public/img/뷰건메인.png" alt="" class="d-block w-100">
+      </div>
       <div class="carousel-item">
         <img src="../img/디어달리아.png" alt="" class="d-block w-100">
       </div>
