승윤 추천  라우터 추가

--- a/views/items.ejs
+++ b/views/items.ejs
@@ -43,7 +43,7 @@
                           <li><a class="dropdown-item" href="http://127.0.0.1:3000/makeup_item"><strong>MAKEUP</strong> </a></li>
                           <li><a class="dropdown-item" href="http://127.0.0.1:3000/makeup_item_BLUSH">BLUSH</a></li>
                           <li><a class="dropdown-item" href="http://127.0.0.1:3000/makeup_item_EYE">EYE</a></li>
-                          <li><a class="dropdown-item" href="http://127.0.0.1:3000/makeup_item_FACE">FACE</a></li>
+                          <li><a class="dropdown-item" href="http://127.0.0.1:3000/makeup_item_BASE">BASE</a></li>
                           <li><a class="dropdown-item" href="http://127.0.0.1:3000/makeup_item_LIPS">LIPS</a></li>
                           <li><a class="dropdown-item" href="http://127.0.0.1:3000/makeup_item_LIPCARE">LIPCARE</a></li>
                         </ul>
