--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>index</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <style>
@@ -31,13 +31,23 @@
         .contents {
           width: 100%;
         }
+        .i_btn{
+          color: green;
+          text-decoration:none;
+          font-weight:bold;
+        }
+        .i_btn:hover{
+          color: white;
+          text-decoration:none;
+          font-weight: bold;
+        }
     </style>
 
 </head>
 <body>
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
         
-        <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+        <a href="http://127.0.0.1:3000/main" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="../img/logo02.PNG" alt="" id="logo">
         </a>
       
@@ -45,8 +55,8 @@
           <li><a href="http://127.0.0.1:3000/main" class="nav-link px-2 link-light">Home</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <li><a href="#" class="nav-link px-2 link-light">About</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <li><a href="#" class="nav-link px-2 link-light">Contents</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <li><a href="#" class="nav-link px-2 link-light">Shop</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <li><a href="#" class="nav-link px-2 link-light">Recommend</a></li>
+          <li><a href="http://127.0.0.1:3000/show_item" class="nav-link px-2 link-light">Shop</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <li><a href="http://127.0.0.1:3000/recommend_start.html" class="nav-link px-2 link-light">Recommend</a></li>
         </ul>
   
         <div class="col-md-3 text-end">
@@ -165,7 +175,7 @@
 
 
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center my-4">
-            <button type="button" class="btn btn-outline-success btn-lg px-4 gap-3"><a href="http://127.0.0.1:3000/show_item ">상품 보러가기</a></button>
+            <button type="button" class="btn btn-outline-success btn-lg px-4 gap-3"><a class = i_btn href="http://127.0.0.1:3000/show_item ">상품 보러가기</a></button>
         </div>
       </div>
     </div>
@@ -203,7 +213,7 @@
       <div class="col-lg-5">
         <img src="../img/추천멘트01.png" alt="" class="img-fluid">
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center my-4">
-          <button type="button" class="btn btn-outline-success btn-lg px-4 gap-3"><a href="./recommend_start.html">추천상품보러가기</a></button>
+          <button type="button" class="btn btn-outline-success btn-lg px-4 gap-3"><a class = i_btn href="./recommend_start.html">추천상품보러가기</a></button>
       </div>
       </div>     
     </div>
