--- a/views/items.ejs
+++ b/views/items.ejs
@@ -4,13 +4,69 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>items</title>
     <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<link rel="stylesheet" href="assets/css/main.css" />
-<script src="../public/"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/main.css" />
+
+    <style>
+        #logo{
+            height: 45px;
+        }
+        a.dropdown-item{
+            text-align: end;
+        }
+        body>header, footer{
+            background-color: #093023;
+        }
+        
+        #dropdownMenuButton1{
+          width: 130px;
+        }
+        
+    </style>
+    <script src="../public/"></script>
 </head>
+
 <body>
+  <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
+        
+    <a href="http://127.0.0.1:3000/main" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="../img/logo02.PNG" alt="" id="logo">
+    </a>
+  
+    <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+      <li><a href="http://127.0.0.1:3000/main" class="nav-link px-2 link-light">Home</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <li><a href="#" class="nav-link px-2 link-light">About</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <li><a href="#" class="nav-link px-2 link-light">Contents</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <li><a href="http://127.0.0.1:3000/show_item" class="nav-link px-2 link-light">Shop</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <li><a href="http://127.0.0.1:3000/recommend_start.html" class="nav-link px-2 link-light">Recommend</a></li>
+    </ul>
+
+    <div class="col-md-3 text-end">
+      <div class="dropdown">
+        <button class="btn btn-outline-light dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+            </svg>
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+        
+            <%if(user==null){%>	
+                <li><a class="dropdown-item" href="./login.html">로그인</a></li>
+                <li><a class="dropdown-item" href="./Join.html"> 회원가입</a></li> 
+            
+            <%}else{%>
+                <li><a class="dropdown-item" href="http://127.0.0.1:3000/mypage_main">마이페이지</a></li>
+                <li><a class="dropdown-item" href="http://127.0.0.1:3000/logout">로그아웃</a></li>
+            <%}%>
+
+        </ul>
+        &nbsp;&nbsp;&nbsp;&nbsp;
+      </div>
+    </div>
+</header>
 
     <div class="logo-bar con">
         
