body-face 카테고리 및 해당  라우터 주석처리

--- a/views/items.ejs
+++ b/views/items.ejs
@@ -138,7 +138,7 @@
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                           <li><a class="dropdown-item" href="http://127.0.0.1:3000/body_item"><strong>BODY</strong> </a></li>
                           <li><a class="dropdown-item" href="http://127.0.0.1:3000/body_item_LOTION">LOTION</a></li>
-                          <li><a class="dropdown-item" href="http://127.0.0.1:3000/body_item_FACE">FACE</a></li>
+                          <!-- <li><a class="dropdown-item" href="http://127.0.0.1:3000/body_item_FACE">FACE</a></li> -->
                           <li><a class="dropdown-item" href="http://127.0.0.1:3000/body_item_PERFUME">PERFUME</a></li>
                         </ul>
                       </div>
