--- a/views/mypage_main.ejs
+++ b/views/mypage_main.ejs
@@ -102,7 +102,7 @@
               <div class="col"><a href="http://127.0.0.1:3000/mypage_modify"><img src="./img/mp222.png" alt="" class="img-fluid"></a></div>
             </div>
             <div class="row my-3">
-              <div class="col"><a href=""><img src="./img/mp333.png" alt="" class="img-fluid"></a></div>
+              <div class="col"><a href="http://127.0.0.1:3000/mypage_out"><img src="./img/mp333.png" alt="" class="img-fluid"></a></div>
             </div>
             <div class="row my-3">
               <div class="col"><a href=""><img src="./img/whiteBG2.png" alt="" class="img-fluid"></a></div>
