--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2,14 +2,16 @@ html {
     font-family: "Noto Sans KR", sans-serif;
 }
 
+
 /*노말라이즈*/
 body,
 ul,
 li {
     list-style: none;
-    /* padding: 0px 10px; */
+    padding: 0px 10px;
     margin: 0;    
 
+    
 }
 a {
     text-decoration: none;
@@ -17,6 +19,7 @@ a {
 }
 
 /*라이브러리*/
+
 .con {
     margin-left: auto;
     margin-right: auto;
@@ -36,7 +39,6 @@ a {
     display: block;
     width: 100%;
 }
-
 /*커스텀*/
 html,
 body {
