--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,92 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>index</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <style>
-       #logo{
-            height: 45px;
-        }
-        a.dropdown-item{
-            text-align: end;
-        }
-        body>header, footer{
-            background-color: #093023;
-        }
-        p {
-            float:inline-end;
-        }
-        .card{
-          width: 250px;
-        }
+  <style>
+    #logo {
+      height: 45px;
+    }
 
-        #degimg{
-          transform: rotate(270deg);
+    a.dropdown-item {
+      text-align: end;
+    }
 
-        }
-        .contents {
-          width: 100%;
-        }
-        .i_btn{
-          color: green;
-          text-decoration:none;
-          font-weight:bold;
-        }
-        .i_btn:hover{
-          color: white;
-          text-decoration:none;
-          font-weight: bold;
-        }
-    </style>
+    body>header,
+    footer {
+      background-color: #093023;
+    }
+
+    p {
+      float: inline-end;
+    }
+
+    .card {
+      width: 250px;
+    }
+
+    #degimg {
+      transform: rotate(270deg);
+    }
+
+    .contents {
+      width: 100%;
+    }
+
+    .i_btn {
+      color: green;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .i_btn:hover {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    /* div.col-md-3.text-end{
+      display: none;
+    } */
+
+    @media (max-width: 890px) {
+      ul.nav.col-12 {
+        display: none;
+      }
+
+      div.col-md-3.text-end {
+        flex-grow: 1;
+      }
+    }
+
+    @media (max-width: 768px) {
+      ul.nav.col-12 {
+        display: none;
+      }
+      div.col-md-3.text-end {
+        flex-grow: 1;
+      }
+      button#dropdownMenuButton1.dropdown-toggle::after{
+        display: none;
+      }
+      
+    }
+  </style>
+ 
 
 </head>
-<body>
-    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
-        
-        <a href="http://127.0.0.1:3000/main" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="../img/logo02.PNG" alt="" id="logo">
-        </a>
-      
-        <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="http://127.0.0.1:3000/main" class="nav-link px-2 link-light">Home</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <li><a href="#" class="nav-link px-2 link-light">About</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <li><a href="#" class="nav-link px-2 link-light">Contents</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <li><a href="http://127.0.0.1:3000/show_item" class="nav-link px-2 link-light">Shop</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <li><a href="http://127.0.0.1:3000/recommend_start.html" class="nav-link px-2 link-light">Recommend</a></li>
-        </ul>
-  
-        <div class="col-md-3 text-end">
-          <div class="dropdown">
-            <button class="btn btn-outline-light dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
-                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-                    <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-                </svg>
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-            
-                <%if(user==null){%>	
-                    <li><a class="dropdown-item" href="./login.html">로그인</a></li>
-                    <li><a class="dropdown-item" href="./Join2.html"> 회원가입</a></li> 
-                
-                <%}else{%>
-                    <li><a class="dropdown-item" href="http://127.0.0.1:3000/mypage_main">마이페이지</a></li>
-                    <li><a class="dropdown-item" href="http://127.0.0.1:3000/logout">로그아웃</a></li>
-                <%}%>
 
-            </ul>
+<body>
+  <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
+
+    <a href="http://127.0.0.1:3000/main"
+      class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="../img/logo02.PNG" alt="" id="logo">
+    </a>
+
+    <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+      <li><a href="http://127.0.0.1:3000/main" class="nav-link px-2 link-light">Home</a></li>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <li><a href="#" class="nav-link px-2 link-light">About</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <li><a href="#" class="nav-link px-2 link-light">Contents</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <li><a href="http://127.0.0.1:3000/show_item" class="nav-link px-2 link-light">Shop</a></li>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <li><a href="http://127.0.0.1:3000/recommend_start.html" class="nav-link px-2 link-light">Recommend</a></li>
+    </ul>
+    
+     
+    <div class="col-md-3 text-end">
+      <div class="dropdown">
+        <button class="btn btn-outline-light dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+            <path fill-rule="evenodd"
+              d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
+          </svg>
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+
+          <%if(user==null){%>
+            <li><a class="dropdown-item" href="./login.html">로그인</a></li>
+            <li><a class="dropdown-item" href="./Join.html"> 회원가입</a></li>
+          
+          <%}else{%>
+            <li><a class="dropdown-item" href="http://127.0.0.1:3000/mypage_main">마이페이지</a></li>
+            <li><a class="dropdown-item" href="http://127.0.0.1:3000/logout">로그아웃</a></li>
+          <%}%>
+
+        </ul>
             &nbsp;&nbsp;&nbsp;&nbsp;
           </div>
         </div>
     </header>
 
 
-        <!-- Carousel -->
-<div id="demo" class="carousel slide" data-bs-ride="carousel">
+  <!-- Carousel -->
+  <div id="demo" class="carousel slide" data-bs-ride="carousel">
 
     <!-- Indicators/dots -->
     <div class="carousel-indicators">
@@ -97,12 +139,12 @@
       <button type="button" data-bs-target="#demo" data-bs-slide-to="4"></button>
 
     </div>
-  
+
     <!-- The slideshow/carousel -->
     <div class="carousel-inner" id="test01">
       <div class="carousel-item active">
         <img src="../img/001.jpg" alt="" class="d-block w-100">
-      </div>  
+      </div>
       <div class="carousel-item">
         <img src="../img/002.jpg" alt="" class="d-block w-100">
       </div>
@@ -116,7 +158,7 @@
         <img src="../img/005.jpg" alt="" class="d-block w-100">
       </div>
     </div>
-  
+
     <!-- Left and right controls/icons -->
     <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
       <span class="carousel-control-prev-icon"></span>
@@ -128,60 +170,71 @@
 
   <div class="container">
     <div class="px-4 py-5 my-2">
-        <h4 class="text-center">Md's pick</h1></h4><br><h1>
+      <h4 class="text-center">Md's pick</h1>
+      </h4><br>
+      <h1>
         <h1 class="display-10 fw-bold text-center">자연을 그대로 담은 향기</h1>
         <p class="lead mb-4 float-none text-center">은은한 벚꽃향부터 매혹적인 장미향까지. <br>어쩌면 당신이 봄이 될지도 몰라요</p>
 
         <div class="row my-2">
           <div class="col-lg-6 align-self-center"><br>
-          <div class="text-center">
-            <div class="row row-cols-2 justify-content-start">
-              <img src="https://www.lush.co.kr/data/goods/20/02/06/1000001178/1000001178_main_093.jpg" class="img-thumbnail mx-auto" alt="">
-              <img src="https://lush.co.kr/data/goods/19/12/49/1000000894/1000000894_detail_052.jpg" class="img-thumbnail mx-auto" alt="">
+            <div class="text-center">
+              <div class="row row-cols-2 justify-content-start">
+                <img src="https://www.lush.co.kr/data/goods/20/02/06/1000001178/1000001178_main_093.jpg"
+                  class="img-thumbnail mx-auto" alt="">
+                <img src="https://lush.co.kr/data/goods/19/12/49/1000000894/1000000894_detail_052.jpg"
+                  class="img-thumbnail mx-auto" alt="">
+              </div>
+              <div class="row row-cols-2 justify-content-start">
+                <img src="https://lush.co.kr/data/goods/19/12/49/1000000878/1000000878_detail_021.jpg"
+                  class="img-thumbnail mx-auto" alt="">
+                <img src="https://lush.co.kr/data/goods/19/12/49/1000000874/1000000874_detail_055.jpg"
+                  class="img-thumbnail mx-auto" alt="">
+              </div>
             </div>
-            <div class="row row-cols-2 justify-content-start">
-              <img src="https://lush.co.kr/data/goods/19/12/49/1000000878/1000000878_detail_021.jpg" class="img-thumbnail mx-auto" alt="">
-              <img src="https://lush.co.kr/data/goods/19/12/49/1000000874/1000000874_detail_055.jpg" class="img-thumbnail mx-auto" alt="">
+
+          </div>
+
+          <div class="col-lg-6 align-self-center">
+            <div class="row g-0 border rounded overflow-hidden flex-md-row shadow-sm h-md-250 position-relative">
+              <div class="col p-4 d-flex flex-column position-static">
+                <strong class="d-inline-block mb-2 text-dark">Lush</strong>
+                <h3 class="mb-0">사쿠라 보디스프레이</h3>
+                <div class="mb-1 text-muted">★★★★★</div><br>
+                <p class="card-text mb-auto">시향해보고 고민하다가 집에 도착해서도 잔향이 좋아서 바로 온라인으로 주문했어요ㅎㅎ 진짜 딱 러쉬에서만 살 수 있는 흔하지 않은 향인데
+                  은은한 향이라서 너무 맘에들어요!</p>
+              </div>
+              <div class="col-auto d-none d-lg-block">
+                <img src="https://lush.co.kr/data/plus_review/1000001178/a17aea7d895cc355" alt=""
+                  style="height: 300px;">
+              </div>
+            </div>
+            <div class="row g-0 border rounded overflow-hidden flex-md-row shadow-sm h-md-250 position-relative">
+              <div class="col p-4 d-flex flex-column position-static">
+                <strong class="d-inline-block mb-2 text-dark">Lush</strong>
+                <h3 class="mb-0">투 모어 하츠</h3>
+                <div class="mb-1 text-muted">★★★★★</div><br>
+                <p class="card-text mb-auto">시간이 지나 남는 잔향은 첫 향보다 훨씬 잔잔하고 부드러운 꽃향이 올라오고, 아카시아 꿀향같은 달달한 향이 은은하게 남습니다. 외출때
+                  뿌려도 좋지만 잠들기전에 사용하면 마음이 평온해지고 포근해져요.</p>
+              </div>
+              <div class="col-auto d-none d-lg-block">
+                <img src="https://lush.co.kr/data/plus_review/1000000874/f98a943da258b216" alt=""
+                  style="height: 300px;">
+              </div>
             </div>
           </div>
-          
-        </div>
 
-        <div class="col-lg-6 align-self-center">
-          <div class="row g-0 border rounded overflow-hidden flex-md-row shadow-sm h-md-250 position-relative">
-            <div class="col p-4 d-flex flex-column position-static">
-              <strong class="d-inline-block mb-2 text-dark">Lush</strong>
-              <h3 class="mb-0">사쿠라 보디스프레이</h3>
-              <div class="mb-1 text-muted">★★★★★</div><br>
-              <p class="card-text mb-auto">시향해보고 고민하다가 집에 도착해서도 잔향이 좋아서 바로 온라인으로 주문했어요ㅎㅎ 진짜 딱 러쉬에서만 살 수 있는 흔하지 않은 향인데 은은한 향이라서 너무 맘에들어요!</p>
-            </div>
-            <div class="col-auto d-none d-lg-block">
-              <img src="https://lush.co.kr/data/plus_review/1000001178/a17aea7d895cc355" alt="" style="height: 300px;">
-            </div>
-          </div>
-          <div class="row g-0 border rounded overflow-hidden flex-md-row shadow-sm h-md-250 position-relative">
-            <div class="col p-4 d-flex flex-column position-static">
-              <strong class="d-inline-block mb-2 text-dark">Lush</strong>
-              <h3 class="mb-0">투 모어 하츠</h3>
-              <div class="mb-1 text-muted">★★★★★</div><br>
-              <p class="card-text mb-auto">시간이 지나 남는 잔향은 첫 향보다 훨씬 잔잔하고 부드러운 꽃향이 올라오고, 아카시아 꿀향같은 달달한 향이 은은하게 남습니다. 외출때 뿌려도 좋지만 잠들기전에 사용하면 마음이 평온해지고 포근해져요.</p>
-            </div>
-            <div class="col-auto d-none d-lg-block">
-              <img src="https://lush.co.kr/data/plus_review/1000000874/f98a943da258b216" alt="" style="height: 300px;">
-            </div>
+
+
+          <div class="d-grid gap-2 d-sm-flex justify-content-sm-center my-4">
+            <button type="button" class="btn btn-outline-success btn-lg px-4 gap-3"><a class=i_btn
+                href="http://127.0.0.1:3000/show_item ">상품 보러가기</a></button>
           </div>
         </div>
-
-
-
-        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center my-4">
-            <button type="button" class="btn btn-outline-success btn-lg px-4 gap-3"><a class = i_btn href="http://127.0.0.1:3000/show_item ">상품 보러가기</a></button>
-        </div>
-      </div>
     </div>
   </div>
 
-  
+
 
 
   <div class="container-fluid">
@@ -189,20 +242,20 @@
     <div class="row justify-content-center">
       <div class="col-lg-4">
         <a href=""><img src="../img/비건설명.png" alt="" class="contents img-responsive rounded mg-0 pl-0"></a>
-        
+
       </div>
       <div class="col-lg-4">
         <a href=""><img src="../img/비건뉴스.png" alt="" class="contents img-responsive rounded"></a>
-        
+
       </div>
       <div class="col-lg-4">
         <a href=""><img src="../img/비건포스트.png" alt="" class="contents img-responsive rounded"></a>
-        
+
       </div>
     </div>
     <br><br><br>
   </div>
-    
+
 
   <div class="container-fluid border">
     <br><br>
@@ -213,23 +266,24 @@
       <div class="col-lg-5">
         <img src="../img/추천멘트01.png" alt="" class="img-fluid">
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center my-4">
-          <button type="button" class="btn btn-outline-success btn-lg px-4 gap-3"><a class = i_btn href="./recommend_start.html">추천상품보러가기</a></button>
+          <button type="button" class="btn btn-outline-success btn-lg px-4 gap-3"><a class=i_btn
+              href="./recommend_start.html">추천상품보러가기</a></button>
+        </div>
       </div>
-      </div>     
     </div>
     <br><br><br>
   </div>
-    
-
-
 
 
 
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3">
     <p class="col-md-4 mb-0 text-muted">© 2021 Company, Inc</p>
 
-    <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-      <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+    <a href="/"
+      class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+      <svg class="bi me-2" width="40" height="32">
+        <use xlink:href="#bootstrap"></use>
+      </svg>
     </a>
 
     <ul class="nav col-md-4 justify-content-end">
@@ -243,7 +297,13 @@
 
 
 
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-      
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous">
+
+
+  </script>
+
 </body>
+
 </html>
