--- a/views/index.ejs
+++ b/views/index.ejs
@@ -279,7 +279,7 @@
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3">
     <p class="col-md-4 mb-0 text-muted">© 2021 Company, Inc</p>
 
-    <a href="/"
+    <a href="http://127.0.0.1:3000/main"
       class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
       <svg class="bi me-2" width="40" height="32">
         <use xlink:href="#bootstrap"></use>
