--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
   <title>index</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <style>
     #logo {
@@ -282,7 +282,7 @@ body{background-color:#f1f1f2}
         <div class="col-lg-4">
             <div class="box1">
                 <img class="pic-1" src="./img/비건설명.png">
-                <h1 class="title fs-1">비건설명 바로가기</h1>
+                <h1 class="title fs-3">비건설명 바로가기</h1>
                 <ul class="icon">
                     <li><a href="http://127.0.0.1:3000/recommend_start.html"><i class="fa fa-search"></i></a></li>
                 </ul>
@@ -291,7 +291,7 @@ body{background-color:#f1f1f2}
         <div class="col-lg-4">
             <div class="box1">
                 <img class="pic-1" src="./img/비건뉴스.png">
-                <h1 class="title fs-1">비건뉴스 바로가기</h1>
+                <h1 class="title fs-3">비건뉴스 바로가기</h1>
                 <ul class="icon">
                     <li><a href="#"><i class="fa fa-search"></i></a></li>
                 </ul>
@@ -300,7 +300,7 @@ body{background-color:#f1f1f2}
         <div class="col-lg-4">
             <div class="box1">
                 <img class="pic-1" src="./img/비건포스트.png">
-                <h1 class="title fs-1">비건포스트 바로가기</h1>
+                <h1 class="title fs-3">비건포스트 바로가기</h1>
                 <ul class="icon">
                     <li><a href="#"><i class="fa fa-search"></i></a></li>
                 </ul>
